Provide patched jffi and set to compileOnly so to exclude configured ones.